# los

./: .gitignore  CMakeLists.txt  README.md
include/config/: compiler.fwd.h  env.fwd.h  ir_generator.fwd.h  lexer.fwd.h  parser.fwd.h
include/program/: compiler.h  console.h  env.h  environment.h  interpreter.h  ir_generator.h  lexer.h  object.h  parser.h  runtime.h  source.h  utils.h
project/: project.json
project/.template/: template.los
project/src/: main.los  main.py  package.json
project/src/system/: lib.los
src/: main.asm  main.cpp  main.los  main.pseudo  main.sf  template.pseudo  template.sf
src/program/: compiler.cpp  console.cpp  env.cpp  environment.cpp  interpreter.cpp  ir_generator.cpp  lexer.cpp  object.cpp  parser.cpp  runtime.cpp  source.cpp  terminal.cpp  utils.cpp
src/resources/: ast.json  los.json
src/whereami/: whereami.c
